--- a/www/style.css
+++ b/www/style.css
@@ -3,7 +3,7 @@ html.shiny-busy .container-fluid {
 }
 
 .shiny-image-output {
-  min-height: 200px;
+  min-width: 300px;
   height: auto !important
 }
 
@@ -33,4 +33,8 @@ html.shiny-busy .container-fluid {
 
 h4 {
   margin-top: 20px;
+}
+
+.img-block {
+  display: inline-block;
 }
