--- a/www/style.css
+++ b/www/style.css
@@ -1,10 +1,10 @@
 html.shiny-busy .container-fluid {
-  filter: blur(5px)
+  filter: blur(5px);
 }
 
 .shiny-image-output {
   min-width: 300px;
-  height: auto !important
+  height: auto !important;
 }
 
 .overlay {
@@ -14,7 +14,7 @@ html.shiny-busy .container-fluid {
   height: 100%;
   width: 100%;
   z-index: 99;
-  background: rgba(0,0,0,0.5)
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .load-text {
@@ -26,9 +26,9 @@ html.shiny-busy .container-fluid {
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  color: #FFF;
+  color: #fff;
   z-index: 99;
-  font-size: 6vmin
+  font-size: 6vmin;
 }
 
 h4 {
